<resources>
    <string name="app_name">SuperPuperChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Добро пожаловать в СПЧ</string>
    <string name="Email">Email</string>
    <string name="username">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="open_register">Зарегистрироваться</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="register">Регистрация</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="message">Сообщение</string>
    <string name="chats">Чаты</string>
    <string name="start_enter_name">Начните вводить имя</string>
    <string name="back">Назад</string>
    <string name="friends">Друзья</string>
</resources>