<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    tools:context=".sign_screen.SignInFragment">

    <ProgressBar
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@drawable/round_corners"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:hint="@string/username"
                android:text="aaa@aaa.aaa"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:textColor="@color/white" />

            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:hint="@string/password"
                android:text="aaaaaa"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textColor="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/signin_button"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            app:backgroundTint="@color/gray_dark"
            android:background="@drawable/round_corners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/open_sign_up"
            android:padding="20dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/open_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>




</RelativeLayout>