<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    tools:context=".sign.sign_up.SignUpFragment">

    <ProgressBar
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/back"
        android:layout_margin="20dp"
        android:text="@string/back"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/add_photo"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:src="@drawable/camera"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/added_image"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:visibility="gone"
                android:src="@drawable/man"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

        </RelativeLayout>



        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/round_corners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:textColor="@color/white" />

            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <EditText
                android:id="@+id/enter_name_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:textColor="@color/white" />

            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <EditText
                android:id="@+id/enter_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textColor="@color/white" />

            <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <EditText
                android:id="@+id/confirm_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:hint="@string/confirrm_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textColor="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/registration_button"
            android:text="@string/register"
            android:layout_marginTop="20dp"
            app:backgroundTint="@color/gray_dark"
            android:background="@drawable/round_corners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>